# heartbeat

./: .gitignore  Justfile  README.md  TODO.md
heartbeat-client/: Cargo.toml  README.md  config.toml.template
heartbeat-client/src/: config.rs  main.rs
heartbeat-server/: Cargo.toml  README.md
heartbeat-server/src/: config.rs  main.rs
