[package]
name = "heartbeat-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }