[package]
name = "heartbeat-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
structmap = "0.1"
structmap-derive = "0.1"